# DefineUIProject

./: CMakeLists.txt  DefineUIProject.qmlproject  DefineUIProject.qmlproject.qtds  README.md  qmlmodules
Generated_Code/: AD1.c  AD1.h  Alarma_Inpt.c  Alarma_Inpt.h  Alarma_PIO.c  Alarma_PIO.h  Cpu.c  Cpu.h  FLASH1.c  FLASH1.h  HAL_CS_ACCEL.c  HAL_CS_ACCEL.h  HAL_CS_FLASH.c  HAL_CS_FLASH.h  HAL_INTERRUPT_ACCEL.c  HAL_INTERRUPT_ACCEL.h  HAL_LEDS.c  HAL_LEDS.h  HAL_PWM_1.c  HAL_PWM_1.h  HAL_RTC.c  HAL_RTC.h  HAL_SPI_2.c  HAL_SPI_2.h  HAL_TICKS.c  HAL_TICKS.h  HAL_UART_2.c  HAL_UART_2.h  HAL_UART_4.c  HAL_UART_4.h  HAL_UART_5.c  HAL_UART_5.h  HAL_USB_VBUS_ENA_PIO.c  HAL_USB_VBUS_ENA_PIO.h  HAL_WDog.c  HAL_WDog.h  HAL_WIFI_RESET_PIO.c  HAL_WIFI_RESET_PIO.h  IO_Map.h  LED_AG.c  (+78 more)
content/: App.qml  ApplicatorInfo.qml  BodyAreaZoomed.qml  BodyAreaZoomedFemale.qml  BodyAreaZoomedMale.qml  BodySilhouette.qml  CMakeLists.txt  CalcScreen.qml  CleanUpImg.qml  CleaningPanels.qml  ConfigurationScreen.qml  CustomRadioButton.qml  CustomSwitch.qml  DefineScreen.ui.qml  ErrorMessageImage.qml  ErrorPopupCentral.qml  ErrorPopupHp.qml  ErrorPopups.qml  FatigueScreen.qml  GenderSelectButton.qml  HP1ImageButton.qml  HP2ImageButton.qml  HP3ImageButton.qml  HP4ImageButton.qml  HPColorIndicator.qml  HPControlPanel.qml  HPLeftStatusImage.qml  HPResucctionCount.qml  HPRightStatusImage.qml  HPTimeRemaining.qml  HPTypeNameLeft.qml  HPTypeNameRight.qml  HpCleaning.qml  HpPlayButton.qml  HpTimerButton.qml  HpVacuumButton.qml  InfoSwitch.qml  InitialScreen.qml  LanguagesScreen.qml  LoadingIndicator.qml  (+17 more)
imports/: CMakeLists.txt
imports/DefineUIProject/: CMakeLists.txt  Constants.qml  qmldir
src/: App.c  App.h  GeneralDefines.h  app_environment.h  defineenums.c  defineenums.h  import_qml_plugins.h  main.cpp
src/AppGUI/: AppGUI.cpp  AppGUI.h  (+3 more)
(+36 files in other folders)
